2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-thumbnails.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-metafile.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file.c:
	Initialize hidden_file_hash lazily

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Read link info using gio

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Read mime list using gio

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Read .hidden using gio.

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.c:
	Free file_info after last use (fixed valgrind warning)
	
        * libnautilus-private/nautilus-file.c:
	Sometimes we freed an uninitialized pointer
	
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Keep all the directory loading info in DirectoryLoadState

2007-09-25  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Implement deep count using gio

2007-09-25  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-metafile.c (set_metafile_contents):
	Don't crash on files that have slashes in them.

2007-09-24  Alexander Larsson  <alexl@redhat.com>
